# sas-dict

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
src/sas_dict/: cli.py
tests/: test_cli.py
